# nvidia-fan-service

./: .gitmodules  README.md  meson.build
data/: com.github.msmaldi.nvidia-fan-service.desktop.in  meson.build
debian/: changelog  control  copyright
src/: main.c  meson.build
